# Hydra

./: .gitignore  CMakeLists.txt
Include/: DbManager.h  NotificationManager.h  SettingsDialog.h  SettingsManager.h
Source/: DbManager.cpp  Hydra.cpp  NotificationManager.cpp  SettingsDialog.cpp  SettingsManager.cpp
